[레거시 코드 리팩터링 - 2단계] 헙크(정현승) 미션 제출합니다. (#554)
* refactor: 엔티티에 equals & hashcode 재정의

* refactor: assertAll을 assertSoftly로 변경

* refactor: 테스트 케이스 보완 및 수정

* docs: `README.md` 수정

* refactor: 중복된 테스트 로직을 추출

* refactor: 모든 원시값과 문자열 포장

* refactor: `MenuService` 메서드 추출 및 `MenuPrice`에 검증 로직과 단위 테스트 추가

* test: `Quantity` 검증 테스트 추가

* test: `MenuName` 검증 테스트 추가

* test: `MenuGroupName` 검증 테스트 추가

* test: `NumberOfGuests` 검증 테스트 추가

* test: `ProductName` 검증 테스트 추가

* test: `ProductPrice` 검증 테스트 추가

* refactor: `OrderService` 메서드 추출

* refactor: `ProductService`의 검증 중복 로직 제거

* refactor: `TableGroupService` 메서드 추출

* refactor: SqlParameterSource가 동작하기 위한 getter 열기