@@ -4,12 +4,15 @@ import kitchenpos.dao.MenuDao;
 import kitchenpos.dao.OrderDao;
 import kitchenpos.dao.OrderLineItemDao;
 import kitchenpos.dao.OrderTableDao;
-import kitchenpos.domain.Order;
-import kitchenpos.domain.OrderLineItem;
-import kitchenpos.domain.OrderTable;
+import kitchenpos.domain.Quantity;
+import kitchenpos.domain.order.Order;
+import kitchenpos.domain.order.OrderStatus;
+import kitchenpos.domain.orderlineitem.OrderLineItem;
+import kitchenpos.domain.ordertable.OrderTable;
 import kitchenpos.ui.dto.OrderLineItemDto;
 import kitchenpos.ui.dto.OrderRequest;
 import kitchenpos.ui.dto.OrderStatusRequest;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -25,11 +28,14 @@ import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.jupiter.api.Assertions.assertAll;
+import static org.assertj.core.api.SoftAssertions.assertSoftly;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class OrderServiceTest {
@@ -46,41 +52,46 @@ class OrderServiceTest {
 
     @Nested
     class CreateTest {
+        private OrderRequest request;
+        private List<OrderLineItemDto> orderLineItemDtos;
+
+        @BeforeEach
+        void setUp() {
+            request = mock(OrderRequest.class);
+            orderLineItemDtos = List.of(
+                    new OrderLineItemDto(1L, 2L),
+                    new OrderLineItemDto(2L, 3L),
+                    new OrderLineItemDto(3L, 4L)
+            );
+        }
+
         @Test
-        @DisplayName("orderLineItems가 비어있으면 예외가 발생한다.")
+        @DisplayName("주문에 해당하는 주문항목(orderLineItem)이 비어있으면 예외가 발생한다.")
         void emptyOrderLineItems() {
             // given
-            final OrderRequest request = new OrderRequest(1L, Collections.emptyList());
-            // when, then
-            assertThatThrownBy(() -> orderService.create(request)).isInstanceOf(IllegalArgumentException.class);
-        }
-
-        @Test
-        @DisplayName("요청한 메뉴가 존재하지 않으면 예외가 발생한다.")
-        void doesNotMatchMenuSize() {
-            // given
-            final List<OrderLineItemDto> orderLineItemDtos = List.of(
-                    new OrderLineItemDto(1L, 2L),
-                    new OrderLineItemDto(2L, 3L),
-                    new OrderLineItemDto(3L, 4L)
-            );
-            final OrderRequest request = new OrderRequest(1L, orderLineItemDtos);
-            given(menuDao.countByIdIn(any())).willReturn(999L);
+            final OrderRequest request = mock(OrderRequest.class);
+            given(request.getOrderLineItems()).willReturn(Collections.emptyList());
 
             // when, then
             assertThatThrownBy(() -> orderService.create(request)).isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
-        @DisplayName("요청에 해당하는 orderTable을 찾지 못하면 예외가 발생한다.")
-        void cannotFindOrderTable() {
+        @DisplayName("주문항목의 갯수와 저장된 메뉴의 갯수가 다른면 예외가 발생한다.")
+        void differentSizeOfOrderLineItemAndMenu() {
             // given
-            final List<OrderLineItemDto> orderLineItemDtos = List.of(
-                    new OrderLineItemDto(1L, 2L),
-                    new OrderLineItemDto(2L, 3L),
-                    new OrderLineItemDto(3L, 4L)
-            );
-            final OrderRequest request = new OrderRequest(1L, orderLineItemDtos);
+            given(request.getOrderLineItems()).willReturn(orderLineItemDtos);
+            given(menuDao.countByIdIn(any())).willReturn(2L);
+
+            // when, then
+            assertThatThrownBy(() -> orderService.create(request)).isInstanceOf(IllegalArgumentException.class);
+        }
+
+        @Test
+        @DisplayName("주문 테이블(orderTable)을 찾지 못하면 예외가 발생한다.")
+        void cannotFindOrderTableDao() {
+            // given
+            given(request.getOrderLineItems()).willReturn(orderLineItemDtos);
             given(menuDao.countByIdIn(any())).willReturn(3L);
             given(orderTableDao.findById(anyLong())).willReturn(Optional.empty());
 
@@ -89,18 +100,14 @@ class OrderServiceTest {
         }
 
         @Test
-        @DisplayName("요청에 해당하는 orderTable이 비어있으면(empty) 예외가 발생한다.")
+        @DisplayName("요청에 해당하는 orderTable이 비어있으면 예외가 발생한다.")
         void emptyOrderTable() {
             // given
-            final List<OrderLineItemDto> orderLineItemDtos = List.of(
-                    new OrderLineItemDto(1L, 2L),
-                    new OrderLineItemDto(2L, 3L),
-                    new OrderLineItemDto(3L, 4L)
-            );
             final OrderRequest request = new OrderRequest(1L, orderLineItemDtos);
-            final OrderTable orderTable = new OrderTable(1L, 2L, 0, true);
+            final OrderTable orderTable = mock(OrderTable.class);
             given(menuDao.countByIdIn(any())).willReturn(3L);
             given(orderTableDao.findById(anyLong())).willReturn(Optional.of(orderTable));
+            given(orderTable.isEmpty()).willReturn(true);
 
             // when, then
             assertThatThrownBy(() -> orderService.create(request)).isInstanceOf(IllegalArgumentException.class);
@@ -110,26 +117,38 @@ class OrderServiceTest {
         @DisplayName("주문을 생성한다.")
         void createOrder() {
             // given
-            final List<OrderLineItemDto> orderLineItemDtos = List.of(
-                    new OrderLineItemDto(1L, 2L),
-                    new OrderLineItemDto(2L, 3L),
-                    new OrderLineItemDto(3L, 4L)
-            );
             final OrderRequest request = new OrderRequest(1L, orderLineItemDtos);
-
-            final OrderTable orderTable = new OrderTable(1L, 2L, 3, false);
+            final OrderTable orderTable = mock(OrderTable.class);
+            final Order order = new Order(1L, OrderStatus.COOKING, LocalDateTime.now());
             given(menuDao.countByIdIn(any())).willReturn(3L);
             given(orderTableDao.findById(anyLong())).willReturn(Optional.of(orderTable));
-            given(orderDao.save(any())).willReturn(mock(Order.class));
+            given(orderDao.save(any())).willReturn(order);
+
+            final List<OrderLineItem> savedOrderLineItems = List.of(
+                    new OrderLineItem(1L, 1L, 1L, new Quantity(2L)),
+                    new OrderLineItem(2L, 1L, 2L, new Quantity(3L)),
+                    new OrderLineItem(3L, 1L, 3L, new Quantity(4L))
+            );
+            when(orderLineItemDao.save(any()))
+                    .thenReturn(savedOrderLineItems.get(0))
+                    .thenReturn(savedOrderLineItems.get(1))
+                    .thenReturn(savedOrderLineItems.get(2));
+
 
             // when
             final Order result = orderService.create(request);
 
             // then
-            assertAll(
-                    () -> verify(orderDao, times(1)).save(any()),
-                    () -> verify(orderLineItemDao, times(3)).save(any())
-            );
+            assertSoftly(softly -> {
+                verify(orderDao, times(1)).save(any());
+                verify(orderLineItemDao, times(3)).save(any());
+                assertThat(result).usingRecursiveComparison()
+                        .ignoringFields("orderedTime")
+                        .isEqualTo(order);
+                assertThat(result).extracting("orderLineItems")
+                        .usingRecursiveComparison()
+                        .isEqualTo(savedOrderLineItems);
+            });
         }
     }
 
@@ -138,31 +157,41 @@ class OrderServiceTest {
     void list() {
         // given
         final List<OrderLineItem> orderLineItems = List.of(
-                new OrderLineItem(1L, 1L, 1L, 2),
-                new OrderLineItem(2L, 1L, 2L, 3),
-                new OrderLineItem(3L, 1L, 3L, 4)
+                new OrderLineItem(1L, 1L, 1L, new Quantity(2)),
+                new OrderLineItem(2L, 1L, 2L, new Quantity(3)),
+                new OrderLineItem(3L, 1L, 3L, new Quantity(4))
         );
-        final List<Order> orders = List.of(
-                new Order(1L, 1L, "orderStatus", LocalDateTime.now(), orderLineItems)
-        );
-        given(orderDao.findAll()).willReturn(orders);
+        final Order order = new Order(1L, OrderStatus.COOKING, LocalDateTime.now());
+        order.updateOrderLineItems(orderLineItems);
+        given(orderDao.findAll()).willReturn(List.of(order));
 
         // when
         final List<Order> result = orderService.list();
 
         // then
-        assertThat(result).usingRecursiveComparison().isEqualTo(orders);
+        assertThat(result).usingRecursiveComparison().isEqualTo(List.of(order));
     }
 
     @Nested
     class ChangeOrderStatusTest {
         @Test
-        @DisplayName("이미 orderStatus가 COMPLETION으로 되었다면 예외가 발생한다.")
+        @DisplayName("요청한 주문을 찾을 수 없으면 예외가 발생한다.")
+        void cannotFindOrder() {
+            // given
+            given(orderDao.findById(anyLong())).willReturn(Optional.empty());
+
+            // when, then
+            assertThatThrownBy(() -> orderService.changeOrderStatus(1L, null))
+                    .isInstanceOf(IllegalArgumentException.class);
+        }
+
+        @Test
+        @DisplayName("수정 요청의 주문상태가 COMPLETION이라면 예외가 발생한다.")
         void alreadyOrderStatusIsCompletion() {
             // given
             final Order order = mock(Order.class);
             given(orderDao.findById(anyLong())).willReturn(Optional.of(order));
-            given(order.getOrderStatus()).willReturn("COMPLETION");
+            given(order.getOrderStatus()).willReturn(OrderStatus.COMPLETION);
 
             // when, then
             assertThatThrownBy(() -> orderService.changeOrderStatus(1L, new OrderStatusRequest("MEAL")))
@@ -173,18 +202,21 @@ class OrderServiceTest {
         @DisplayName("주문의 상태를 변경한다.")
         void changeOrderStatus() {
             // given
-            final Order order = mock(Order.class);
+            final Order order = new Order(1L, OrderStatus.COOKING, LocalDateTime.now());
             given(orderDao.findById(anyLong())).willReturn(Optional.of(order));
-            given(order.getOrderStatus()).willReturn("MEAL");
 
             // when
             final Order result = orderService.changeOrderStatus(1L, new OrderStatusRequest("COMPLETION"));
 
             // then
-            assertAll(
-                    () -> verify(orderDao, times(1)).save(any()),
-                    () -> verify(orderLineItemDao, times(1)).findAllByOrderId(anyLong())
-            );
+            assertSoftly(softly -> {
+                verify(orderDao, times(1)).save(any());
+                verify(orderLineItemDao, times(1)).findAllByOrderId(anyLong());
+                assertThat(result).usingRecursiveComparison()
+                        .ignoringFields("orderStatus", "orderedTime")
+                        .isEqualTo(order);
+                assertThat(result.getOrderStatus()).isEqualTo(OrderStatus.COMPLETION);
+            });
         }
     }
 }
